--- a/pylama.ini
+++ b/pylama.ini
@@ -1,5 +1,5 @@
 [pylama]
-skip = env/*,build/*
+skip = venv/*,build/*
 ; mccabe - оценка сложности кода
 ; pycodestyle - соответствие pep8
 ; pyflakes - синтаксический анализ и обнаружение ошибок
